# Python-GeneCode

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.in
genecode/: cli.py  common.py  constant.py  database.py  genecode.py  gui.py  metadata-example.json  query.txt
genecode/test/: conftest.py  test_database.py  test_genecode.py
