[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "genecode"
authors = [
    {name = "Yan Kuang"},
]
description = "Gene Code"
requires-python = ">=3.9"
keywords = [ "genecode" ]
dependencies = [
    "aiohttp",
    "biopython",
    "tealogger",
]
dynamic = [
    "version",
    "readme"
]

[project.optional-dependencies]
test = [
    "pylint",
    "pytest",
    "pytest-asyncio",
]
develop = [
    "pylint",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
genecode = "genecode.cli:main"
genecodecli = "genecode.cli:main"

[project.gui-scripts]
genecodegui = "genecode.gui:main"

[project.urls]
"Homepage" = "https://github.com/YTKme/Python-GeneCode"
"Bug Tracker" = "https://github.com/YTKme/Python-GeneCode/issues"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools]
packages = [
    "genecode"
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
readme = {file = ["README.md"]}
